--- a/Web.Statu/Views/Kindex/Zebricek.cshtml
+++ b/Web.Statu/Views/Kindex/Zebricek.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Company>
+﻿@model IEnumerable<SubjectWithKIndex>
 
 @using Devmasters.Core;
 @using HlidacStatu.Lib.Analysis.KorupcniRiziko;
@@ -105,7 +105,7 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach (var record in Model.Where(r => r.Value4Sort != HlidacStatu.Lib.Analysis.KorupcniRiziko.Consts.MinSmluvPerYearKIndexValue).Select((m, i) => new { rank = i + 1, item = m }))
+                @foreach (var record in Model.Where(r => r.KIndex != HlidacStatu.Lib.Analysis.KorupcniRiziko.Consts.MinSmluvPerYearKIndexValue).Select((m, i) => new { rank = i + 1, item = m }))
                 {
                     <tr>
                         <td>
@@ -115,10 +115,10 @@
                             @Html.KIndexLabelLink(record.item.Ico, showNone: true, rok: selectedYear)
                         </td>
                         <td>
-                            <a href="/subjekt/@record.item.Ico">@record.item.Name</a>
+                            <a href="/subjekt/@record.item.Ico">@record.item.Jmeno</a>
                         </td>
                         <td class="number">
-                            @(record.item.Value4Sort?.ToString("F2"))
+                            @(record.item.KIndex.ToString("F2"))
                         </td>
                         @*<td></td>*@
                     </tr>
@@ -131,8 +131,8 @@
             <p>
                 @{
                     string[] rest = Model
-                        .Where(r => r.Value4Sort == HlidacStatu.Lib.Analysis.KorupcniRiziko.Consts.MinSmluvPerYearKIndexValue)
-                        .Select(r => $"<a href=\"/subjekt/{r.Ico} \">{r.Name}</a>").ToArray();
+                        .Where(r => r.KIndex == HlidacStatu.Lib.Analysis.KorupcniRiziko.Consts.MinSmluvPerYearKIndexValue)
+                        .Select(r => $"<a href=\"/subjekt/{r.Ico} \">{r.Jmeno}</a>").ToArray();
                 } 
                 
                 @Html.Raw(string.Join(" | ", rest)) 
