--- a/Web.Statu/Views/Kindex/Porovnat.Index.cshtml
+++ b/Web.Statu/Views/Kindex/Porovnat.Index.cshtml
@@ -46,7 +46,7 @@
 
 <div class="row">
     <div class="col-sm-12">
-        <p>Připravili jsme pro vás několik žebříčků</p>
+        <p>Připravili jsme pro vás několik porovnání</p>
         <div class="row">
             <div class="col-xs-12">
                 @foreach (var g in Devmasters.Enums.EnumTools.Groups(typeof(HlidacStatu.Lib.Data.Firma.Zatrideni.StatniOrganizaceObor)))
