--- a/Web.Statu/Views/Kindex/Zebricek.Skokani.cshtml
+++ b/Web.Statu/Views/Kindex/Zebricek.Skokani.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SubjectWithKIndex>
+﻿@model IEnumerable<SubjectWithKIndexTrend>
 
 @using Devmasters.Core;
 @using HlidacStatu.Lib.Analysis.KorupcniRiziko;
@@ -9,11 +9,30 @@
 @{
 
     int selectedYear = ViewBag.SelectedYear;
+    string selectedGroup = ViewBag.SelectedGroup;
+
+    var data = Model.ToArray().Where(m => true);
+
+    if (!string.IsNullOrEmpty(selectedGroup))
+    {
+        data = data.Where(c => string.IsNullOrEmpty(selectedGroup) || selectedGroup == c.Group);
+    }
 
 
-    ViewBag.Title = ViewBag.LadderTitle + " pro " + ViewBag.SelectedYear;
+
+    string filterUrlValue = "group";
+    Dictionary<string, int> filterGroups = Model
+        .GroupBy(k => k.Group, v => v, (k, v) => new { group = k, count = v.Count() })
+        .ToDictionary(k => k.group, c => c.count);
+
+
+    ViewBag.Title = ViewBag.LadderTitle + " za " + ViewBag.SelectedYear;
     ViewBag.HideTitle = true;
 
+    if (filterUrlValue == "group" && !string.IsNullOrEmpty(selectedGroup))
+    {
+        ViewBag.SubTitle = $"pro {selectedGroup}";
+    }
 
 }
 
@@ -26,8 +45,9 @@
 {
     <ol class="breadcrumb">
         <li><a href="/">Hlídač Státu</a></li>
-        <li>K–Index</li>
-        <li class="active">@ViewBag.Title</li>
+        <li><a href="/kindex">K–Index</a></li>
+        <li><a href="/kindex/zebricek">Žebříčky</a></li>
+        <li class="active">@ViewBag.Title @ViewBag.SubTitle</li>
     </ol>
 }
 
@@ -52,8 +72,46 @@
         </h3>
     </div>
 </div>
+
+@if (filterGroups.Count > 1 && Model.Count() > 10)
+{
+
+    <div class="row">
+        <div class="col-sm-12">
+            <h4 class="">
+                Skupiny podle kterých lze filtrovat:
+            </h4>
+            <div>
+                @if (string.IsNullOrEmpty(selectedGroup))
+                {
+                    @*<span style="padding-right:20px;"><i class="far fa-arrow-square-right"></i>Zobrazeno vše</span>*@
+                }
+                else
+                {
+                    <a style="padding-right:20px;" href="@(ViewBag.SelectedLadder)?rok=@selectedYear"><i class="fas fa-arrow-square-right"></i>Zrušit filter, zobrazit vše</a>
+                }
+                @foreach (var group in filterGroups)
+                {
+                    if (group.Key != selectedGroup)
+                    {
+                        <span style="padding-right:20px;">
+                            <a href="@(ViewBag.SelectedLadder)?@filterUrlValue=@System.Net.WebUtility.UrlEncode(group.Key)&rok=@selectedYear"><i class="fas fa-arrow-square-right"></i>@group.Key </a>(@group.Value)
+                        </span>
+                    }
+                    else
+                    {
+                        <span style="padding-right:20px;"><i class="far fa-arrow-square-right"></i>@group.Key (@group.Value)</span>
+                    }
+                }
+            </div>
+        </div>
+    </div>
+    <hr />
+}
+
+
 <hr style="width:1px" />
-<div class="row" >
+<div class="row">
     <div class="col-sm-12">
 
         <table class="table table-striped table-dotted table-condensed table-hover">
@@ -67,29 +125,37 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach (var record in Model.Where(r => r.KIndex != HlidacStatu.Lib.Analysis.KorupcniRiziko.Consts.MinSmluvPerYearKIndexValue).Select((m, i) => new { rank = i + 1, item = m }))
+                @foreach (var record in data
+                    .Where(r => r.KIndex != HlidacStatu.Lib.Analysis.KorupcniRiziko.Consts.MinSmluvPerYearKIndexValue)
+                    .Select((m, i) => new { rank = i + 1, item = m }))
                 {
                     <tr>
                         <td>
                             @(record.rank).
                         </td>
                         @*<td>
-                            @Html.KIndexLabelLink(record.item.Ico, showNone: true, rok: selectedYear)
-                        </td>*@
+                                @Html.KIndexLabelLink(record.item.Ico, showNone: true, rok: selectedYear)
+                            </td>*@
                         <td>
                             <a href="/subjekt/@record.item.Ico">@record.item.Jmeno</a>
                         </td>
                         <td class="number">
                             <a href="/kindex/detail/@record.item.Ico?rok=@selectedYear">
-                                @(record.item.KIndex.ToString("F2"))
+                                @{ 
+                                    KIndexData.KIndexLabelValues from = KIndexData.CalculateLabel(record.item.Roky.First().Value);
+                                    KIndexData.KIndexLabelValues to = KIndexData.CalculateLabel(record.item.Roky.Last().Value);
+                                }
+                                @Html.KIndexIcon(from,18)
+                                <i class="far fa-angle-double-right"></i>
+                                @Html.KIndexIcon(to,18)
                             </a>
                         </td>
                         @*<td></td>*@
                     </tr>
-                }
+                                    }
             </tbody>
         </table>
-        
+
 
     </div>
 </div>
