--- a/Web.Statu/Views/Kindex/Zebricek.Skokani.cshtml
+++ b/Web.Statu/Views/Kindex/Zebricek.Skokani.cshtml
@@ -120,7 +120,7 @@
                     <th>Pořadí</th>
                     @*<th>Hodnota</th>*@
                     <th>Firma</th>
-                    <th style="text-align: right;">Změna bodů</th>
+                    <th style="text-align: right;">Změna hodnocení</th>
                     @*<td>Přidat do porovnání</td>*@
                 </tr>
             </thead>
